# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["tauri/src-tauri", "first_party/tauri-plugin-simu"]
resolver = "2"

[workspace.package]
version = "0.0.1"
authors = ["Han <han@deskbtm.com>"]
homepage = "https://publish.deskbtm.com/"
repository = "https://github.com/deskbtm-publish/publish"
rust-version = "1.70"
edition = "2021"

[workspace.dependencies]
serde_json = "1.0"
serde = "1.0"
tauri = "2.0.0-rc.6"
tauri-build = "2.0.0-rc.6"
tauri-plugin-http = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-shell = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-fs = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-os = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-updater = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }

wry = "0.43.1"
tao = "0.30.0"
windows = "0.58"
webview2-com = "0.33"
