[package]
name = "tauri-plugin-simu"
version = "0.1.0"
authors = ["You"]
description = ""
edition = "2021"
rust-version = "1.70"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-simu"

[dependencies]
tauri = { version = "2.0.0-rc.6" }
serde = "1.0"
thiserror = "1.0"
enigo = "0.2.1"

[build-dependencies]
tauri-plugin = { version = "2.0.0-rc.6", features = ["build"] }
