[package]
name = "app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta.7", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri-capacitor-plugin = { path = "./tauri-capacitor-plugin" }
tauri = { version = "=2.0.0-beta.9" }

[features]
# custom-protocol = ["tauri/custom-protocol"]
