[package]
name = "publish-app"
version = "0.0.0"
description = "Create once, publish anywhere"
authors = ["Han <han@deskbtm.com>"]
license = "AGPL"
repository = "https://github.com/deskbtm-publish/publish"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tauri_beta_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
# tauri-capacitor-plugin = { workspace = true }
tauri-plugin-shell = { workspace = true }
tauri = { workspace = true, features = ["default", "devtools", "tray-icon"] }
tauri-plugin-autostart = "2.0.0-beta.2"
tauri-plugin-fs = "2.0.0-beta.2"
