[package]
name = "publish-app"
version = "0.0.0"
description = "Create once, publish anywhere"
authors = ["Han <han@deskbtm.com>"]
license = "AGPL"
repository = "https://github.com/deskbtm-publish/publish"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
wry = { workspace = true, features = ["protocol", "os-webview"] }
tauri-plugin-shell = { workspace = true }
tauri = { workspace = true, features = [
  "default",
  "devtools",
  "tray-icon",
  "image-ico",
  "image-png",
  "macos-private-api",
] }
tauri-plugin-autostart = { workspace = true, branch = "v2" }
tauri-plugin-fs = { workspace = true, branch = "v2" }
tauri-plugin-os = { workspace = true, branch = "v2" }
tauri-plugin-updater = { workspace = true, branch = "v2" }
tauri-plugin-http = { workspace = true, branch = "v2", features = [
  "unsafe-headers",
] }

[target."cfg(target_os = \"windows\")".dependencies]
windows = { workspace = true, features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_LibraryLoader",
  "Win32_System_WinRT",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Com",
] }
webview2-com = { workspace = true }
